--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "crypto-js": "^4.2.0",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "mailtrap": "^3.4.0",
+        "mongoose": "^8.6.1",
         "prettier": "^3.3.3"
     }
 }
