--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
     "singleQuote": true,
-    "printWidth": 200
+    "printWidth": 150,
+    "proseWrap": "always",
+    "tabWidth": 4,
+    "useTabs": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "semi": false
 }
