--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
     "module": "index.ts",
     "type": "module",
     "scripts": {
+        "dev": "bun --watch BE/index.ts",
         "write": "bun prettier . --write && echo 'Done.'",
         "clean": "rm -rf dist && echo 'Done.'"
     },
     "devDependencies": {
-        "@types/bun": "latest"
+        "@types/bun": "latest",
+        "@types/express": "^4.17.21"
     },
     "peerDependencies": {
         "typescript": "^5.0.0"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
         "crypto-js": "^4.2.0",
         "dotenv": "^16.4.5",
