--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "clean": "rm -rf dist && echo 'Done.'"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/bun": "latest",
         "@types/express": "^4.17.21"
     },
@@ -15,7 +16,7 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
-        "bcryptjs": "^2.4.3",
+        "bcrypt": "^5.1.1",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
         "crypto-js": "^4.2.0",
