--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/bun": "latest",
-        "@types/express": "^4.17.21"
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6"
     },
     "peerDependencies": {
         "typescript": "^5.0.0"
