--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "module": "index.ts",
     "type": "module",
     "scripts": {
-        "dev": "bun --watch BE/index.ts",
+        "dev": "bun --watch run ./BE/index.ts",
         "write": "bun prettier . --write && echo 'Done.'",
         "clean": "rm -rf dist && echo 'Done.'"
     },
