--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/bun": "latest",
+        "@types/crypto-js": "^4.2.2",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6"
     },
