--- a/FE/package.json
+++ b/FE/package.json
@@ -11,6 +11,8 @@
         "write": "bun prettier . --write && echo 'Done.'"
     },
     "dependencies": {
+        "formik": "^2.4.6",
+        "lucide-react": "^0.439.0",
         "prettier": "^3.3.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
