--- a/FE/package.json
+++ b/FE/package.json
@@ -11,12 +11,14 @@
         "write": "bun prettier . --write && echo 'Done.'"
     },
     "dependencies": {
+        "axios": "^1.7.7",
         "formik": "^2.4.6",
         "lucide-react": "^0.439.0",
         "prettier": "^3.3.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.26.2"
+        "react-router-dom": "^6.26.2",
+        "zustand": "^4.5.5"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
