--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devDependencies": {
         "@types/bun": "latest",
         "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6"
     },
@@ -19,6 +20,7 @@
     "dependencies": {
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
