--- a/FE/package.json
+++ b/FE/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-app",
+    "name": "fe",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -7,15 +7,13 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview",
-        "write": "bun prettier . --write && echo 'Done.'"
+        "preview": "vite preview"
     },
     "dependencies": {
-        "add": "^2.0.6",
         "axios": "^1.7.7",
-        "formik": "^2.4.6",
-        "lucide-react": "^0.439.0",
-        "prettier": "^3.3.3",
+        "framer-motion": "^11.5.4",
+        "init": "^0.1.2",
+        "lucide-react": "^0.441.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
@@ -34,7 +32,7 @@
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
         "postcss": "^8.4.45",
-        "tailwindcss": "^3.4.10",
+        "tailwindcss": "^3.4.11",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
         "vite": "^5.4.1"
