--- a/FE/package.json
+++ b/FE/package.json
@@ -16,6 +16,7 @@
         "lucide-react": "^0.441.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-helmet-async": "^2.0.5",
         "react-hot-toast": "^2.4.1",
         "react-router-dom": "^6.26.2",
         "zustand": "^4.5.5"
