--- a/package.json
+++ b/package.json
@@ -22,9 +22,19 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mailtrap": "^3.4.0",
         "mongoose": "^8.6.1",
+        "nodemailer": "^6.9.15",
         "prettier": "^3.3.3"
+    },
+    "imports": {
+        "#db/*": "./BE/db/*",
+        "#models/*": "./BE/models/*",
+        "#helpers/*": "./BE/helpers/*",
+        "#services/*": "./BE/services/*",
+        "#middlewares/*": "./BE/middlewares/*",
+        "#controllers/*": "./BE/controllers/*"
     }
 }
