--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,16 @@
         "jsx": "react-jsx",
         "allowJs": true,
 
+        "baseUrl": "./BE",
+        "paths": {
+            "#db/*": ["./db/*"],
+            "#models/*": ["./models/*"],
+            "#helpers/*": ["./helpers/*"],
+            "#services/*": ["./services/*"],
+            "#middlewares/*": ["./middlewares/*"],
+            "#controllers/*": ["./controllers/*"]
+        },
+
         // Bundler mode
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
