--- a/FE/package.json
+++ b/FE/package.json
@@ -19,7 +19,8 @@
         "react-helmet-async": "^2.0.5",
         "react-hook-form": "^7.53.0",
         "react-redux": "^9.1.2",
-        "react-router-dom": "^6.26.2"
+        "react-router-dom": "^6.26.2",
+        "yup": "^1.4.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
