--- a/FE/package.json
+++ b/FE/package.json
@@ -12,7 +12,9 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.7",
         "axios": "^1.7.7",
+        "clsx": "^2.1.1",
         "formik": "^2.4.6",
+        "framer-motion": "^11.11.1",
         "lucide-react": "^0.441.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
