--- a/FE/package.json
+++ b/FE/package.json
@@ -20,6 +20,7 @@
         "react-dom": "^18.3.1",
         "react-helmet-async": "^2.0.5",
         "react-hook-form": "^7.53.0",
+        "react-hot-toast": "^2.4.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.2",
         "yup": "^1.4.0"
