--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
+        "@types/fs-extra": "^11.0.4",
+        "@types/multer": "^1.4.12",
+        "cloudinary": "^2.5.1",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "fs-extra": "^11.2.0",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mailtrap": "^3.4.0",
         "mongoose": "^8.6.1",
+        "multer": "^1.4.5-lts.1",
+        "nanoid": "^5.0.7",
         "nodemailer": "^6.9.15",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "sharp": "^0.33.5"
     },
     "imports": {
         "#db/*": "./BE/db/*",
