--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@types/fs-extra": "^11.0.4",
         "@types/multer": "^1.4.12",
+        "@types/nodemailer": "^6.4.16",
         "cloudinary": "^2.5.1",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
