--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "type": "module",
     "scripts": {
         "dev": "NODE_ENV=development bun run --hot ./BE/index.ts",
-        "write": "bun prettier . --write && echo 'Done.'"
+        "start":"NODE_ENV=production bun run ./BE/index.ts",
+        "build": "bun install && cd FE && bun install && bun run build && echo 'Done.'",
+        "write": "bun prettier . --write && echo 'Done.'",
+        "clean": "rm -rf dist && echo 'Done.'"
     },
     "devDependencies": {
         "@types/bun": "latest",
